# custom-string

./: CMakeLists.txt
src/custom-string/: CustomString.cpp  CustomString.h
tests/custom-string-tests/: CustomStringTests.cpp
